--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "fbgraph",
-  "version": "0.2.5",
-  "description": "a cleaner client to access the facebook graph api",
+  "version": "0.2.6",
+  "description": "Facebook Graph API client",
   "keywords": [
     "facebook",
     "api",
     "graph"
   ],
-  "author": "Cristiano Oliveira <ocean.cris@gmail.com>",
+  "author":  {
+    "name": "Cristiano Oliveira",
+    "email": "ocean.cris@gmail.com>"
+  },
   "main": "index",
   "dependencies": {
     "request": "2.11.x",
