--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fbgraph",
   "version": "1.3.0",
   "description": "Facebook Graph API client",
+  "license": "MIT",
   "keywords": [
     "facebook",
     "api",
@@ -13,11 +14,11 @@
   },
   "main": "index",
   "dependencies": {
-    "request": "2.74.x",
-    "qs": "1.2.x"
+    "qs": "^1.2.2",
+    "request": "^2.79.0"
   },
   "devDependencies": {
-    "vows": "0.7.x"
+    "vows": "^0.7.0"
   },
   "repository": {
     "type": "git",
