--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fbgraph",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "description": "Facebook Graph API client",
   "license": "MIT",
   "keywords": [
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/criso/fbgraph.git"
+    "url": "git://github.com/mgara/fbgraph.git"
   },
   "engines": {
     "node": ">= 0.4.1"
