Switch from Request to phin

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "main": "index",
   "dependencies": {
-    "qs": "^1.2.2",
-    "request": "^2.79.0"
+    "phin": "^2.2.4",
+    "qs": "^1.2.2"
   },
   "devDependencies": {
     "vows": "^0.7.0"
