--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mgara/fbgraph.git"
+    "url": "git://github.com/criso/fbgraph.git"
   },
   "engines": {
     "node": ">= 0.4.1"
